k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80       # Port accessible from outside
      targetPort: 4499 # Internal port the app runs on
  type: LoadBalancer # This makes it accessible on your local machine
