k8s/wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30007   # choose any free NodePort 30000–32767
